kubernetes/apps/kguardian/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: kguardian
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: mdi-lock
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames: [kguardian.tholinka.dev]
  rules:
    - backendRefs:
        - name: kguardian-frontend
          port: 5173
